Slider fix, no longer shifts everything

--- a/index.css
+++ b/index.css
@@ -6,3 +6,7 @@
 h1 {
     @apply text-4xl font-bold
 }
+
+html {
+  overflow-y: scroll;
+}
